# tlapiani-camera-focuser-app

./: CMakeLists.txt  focuscontroller.cpp  focuscontroller.h  ipwi4client.cpp  ipwi4client.h  main.cpp  pwiclient.cpp  pwiclient.h  resources.qrc  widget.cpp  widget.h
